# pcl_tutorial

./: CMakeLists.txt  README.md  after_proj.pcd  test_pcd.pcd
basic/: 2022-01-23-transform-matrix-pointcloud.cpp  2022-01-23-transform-matrix-pointcloud.md  transform_matrix_pointcloud.cpp
data/: .~README.md  monkeyu.ply
data/tutorials/: table_scene_lms400_voxel.pcd
features/: 2022-01-23-estimate-surface-normals.cpp  2022-01-23-estimate-surface-normals.md  2022-01-23-how-3D-features-work.cpp  2022-01-23-how-3D-features-work.md  2022-01-24-estimation-using-integral-images.cpp  2022-01-24-estimation-using-integral-images.md
filtering/: 2022-02-08-extract-indices-from-segmentation.cpp  2022-02-08-extract-indices-from-segmentation.md  2022-02-08-pass-through.cpp  2022-02-08-pass-through.md  2022-02-08-project-points-using-parametric-model.cpp  2022-02-08-project-points-using-parametric-model.md  2022-02-08-radius-conditional-removal.cpp  2022-02-08-radius-conditional-removal.md  2022-02-08-statistical-outlier-removal.cpp  2022-02-08-statistical-outlier-removal.md  2022-02-08-voxel-grid.cpp  2022-02-08-voxel-grid.md
io/: 2022-02-09-pcd-file-format.md  2022-02-09-read-pcd.cpp  2022-02-09-read-pcd.md  2022-02-09-write-pcd.cpp  2022-02-09-write-pcd.md
kdtree/: 2022-02-09-kdtree.cpp  2022-02-09-kdtree.md
ros/: 2022-03-30-ros_msg_conversion.cpp
src/: add.cpp  main.cpp
